@@ -128,7 +128,7 @@ SET (ENABLE_ALSA 1 CACHE BOOL "Include the ALSA driver")
 SET (ENABLE_ESD 0 CACHE BOOL "Include the EsounD (Enlightened Sound Daemon) driver")
 SET (ENABLE_OPENAL 0 CACHE BOOL "Include the OpenAL driver")
 SET (ENABLE_OSS 1 CACHE BOOL "Include the OSS driver")
-SET (ENABLE_SDL 1 CACHE BOOL "Include the SDL driver")
+SET (ENABLE_SDL 0 CACHE BOOL "Include the SDL driver")
 SET (ENABLE_STDOUT 1 CACHE BOOL "Support for output to stdout")
 SET (ENABLE_PIPE 1 CACHE BOOL "Support for output via a pipe to another command")
 SET (ENABLE_DL 0 CACHE BOOL "Load ALSA and Ultra Drivers at Runtime")
@@ -499,7 +499,7 @@ IF (ENABLE_ALSA AND NOT ENABLE_DL)
 ENDIF (ENABLE_ALSA AND NOT ENABLE_DL)
 
 IF (ENABLE_DL)
-# add -ldl for drivers using dlopen()
+# add -ldl but only if a driver using dlopen() is active
   IF (ENABLE_ALSA)
     LIST (APPEND EXTRA_LIBS ${CMAKE_DL_LIBS})
   ENDIF (ENABLE_ALSA)
